--- a/reimsite/templates/reimsite/index.html
+++ b/reimsite/templates/reimsite/index.html
@@ -72,7 +72,7 @@
 			<div class="form-group">
 		    <label for="inputName" class="col-sm-2 control-label">姓名</label>
 		    <div class="col-sm-10">
-		      <input type="text" name="name" class="form-control" id="inputName">
+		      <input type="text" name="name" class="form-control" id="inputName" placeholder="必填">
 		    </div>
 		  </div>
 		  <div class="form-group">
